gateway-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: gateway-service-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: gateway-service.info
    http:
      paths:
      - backend:
          service:
            name: my-gateway
            port:
              number: 80
        path: /
        pathType: Prefix
